[package]
name = "set_field"
version = "0.1.0"
edition = "2021"
authors = ["https://github.com/0xDEADFED5"]
license = "MIT"
description = "Set fields on structs by string"
homepage = "https://github.com/0xDEADFED5/set_field"
repository = "https://github.com/0xDEADFED5/set_field"
readme = "README.md"
keywords = ["struct", "derive", "string"]

[dependencies]
set_field_macro = { version = "0.1.0", path = "../set_field_macro" }
