[package]
name = "set_field_macro"
version = "0.1.1"
edition = "2021"
authors = ["https://github.com/0xDEADFED5"]
license = "MIT"
description = "Derive macro for set_field"
homepage = "https://github.com/0xDEADFED5/set_field"
repository = "https://github.com/0xDEADFED5/set_field"
readme = "README.md"
keywords = ["struct", "derive", "string"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.29", features = ["extra-traits"]}
quote = "1.0.33"